small addition to our page content.

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Coursera, hello!</h1>
+<h1>Coursera, hello! Hopefully I will make it</h1>
 </body>
 </html>
